# Multi_AI_agent_IDE

./: .gitignore  README.md  project_architecture.md  project_context_summary.md  test_execution.py  verify_api.py
backend/: .env.example  agents.py  check_tools.py  design_doc.md  example.py  list_models.py  list_models_v2.py  logger.py  main.py  pyproject.toml  requirements.txt  safe_tools.py  temp_log_reset.py  terminal_manager.py  test_agents.py  test_api.py  test_architect.py  test_coder.py  test_crew_init.py  test_logger.py  test_main.py  test_remaining_agents.py  test_ws_endpoint.py  verify_agents.py
backend/workspace/: README.md  config.py  digital_clock.py  example.py  hello_multi_agent_ide.py  importer.py  requirements.txt
backend/workspace/multi-agent-ide-greeting/: hello_multi_agent_ide.py  requirements.txt
docs/plans/: 2026-02-11-agent-io-improvements.md  2026-02-11-frontend-file-explorer.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: FileExplorer.css  FileExplorer.jsx  Terminal.css  Terminal.jsx
